# aivoice-python

./: .gitignore  BUILD.md  LICENSE  README.md  example.py  example_typed.py  pyproject.toml  requirements.txt
aivoice_python/: __init__.py  aivoice_control.py
tests/: __init__.py  test_aivoice_control.py
