[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivoice-python"
version = "0.1.1"
description = "A Python wrapper for A.I.VOICE Editor API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "yupix", email = "yupi0982@outlook.jp"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aivoice", "tts", "text-to-speech", "voice-synthesis"]
requires-python = ">=3.8"
dependencies = [
    "pythonnet>=3.0.0",
    "typing-extensions>=4.0.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/yupix/aivoice-python"
Repository = "https://github.com/yupix/aivoice-python"
Documentation = "https://github.com/yupix/aivoice-python#readme"
"Bug Tracker" = "https://github.com/yupix/aivoice-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["aivoice_python*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
